// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List 🚏 only has content 1`] = `
<div
  class="ant-pro-table ant-pro-list ant-pro-list ant-pro-list-no-split"
  id="ant-design-pro-table"
>
  <div
    class="ant-card"
    style="height: 100%;"
  >
    <div
      class="ant-card-body"
      style="padding: 0px;"
    >
      <div
        class="ant-pro-table-list-toolbar"
        style="padding: 0px 24px;"
      >
        <div
          class="ant-pro-table-list-toolbar-container"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-left"
          />
          <div
            class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-right"
          />
        </div>
      </div>
      <div
        class="ant-list ant-list-split"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <ul
              class="ant-list-items"
            >
              <div
                class="ant-pro-list-row"
              >
                <li
                  class="ant-list-item"
                >
                  <div
                    class="ant-pro-list-row-header"
                  >
                    <div
                      class="ant-pro-list-row-header-option"
                    />
                  </div>
                  <div
                    class="ant-pro-list-row-content"
                  >
                    <div>
                      段落示意：蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态提供跨越设计与开发的体验解决方案。
                    </div>
                  </div>
                </li>
              </div>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List 🚏 only has description 1`] = `
<div
  class="ant-pro-table ant-pro-list ant-pro-list ant-pro-list-no-split"
  id="ant-design-pro-table"
>
  <div
    class="ant-card"
    style="height: 100%;"
  >
    <div
      class="ant-card-body"
      style="padding: 0px;"
    >
      <div
        class="ant-pro-table-list-toolbar"
        style="padding: 0px 24px;"
      >
        <div
          class="ant-pro-table-list-toolbar-container"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-left"
          />
          <div
            class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-right"
          />
        </div>
      </div>
      <div
        class="ant-list ant-list-split"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <ul
              class="ant-list-items"
            >
              <div
                class="ant-pro-list-row"
              >
                <li
                  class="ant-list-item"
                >
                  <div
                    class="ant-pro-list-row-header"
                  >
                    <div
                      class="ant-pro-list-row-header-option"
                    />
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <div
                          class="ant-list-item-meta-description"
                        >
                          <div
                            class="ant-pro-list-row-description"
                          >
                            <span
                              class="ant-tag"
                            >
                              语雀专栏
                            </span>
                            <span
                              class="ant-tag"
                            >
                              设计语言
                            </span>
                            <span
                              class="ant-tag"
                            >
                              蚂蚁金服
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </div>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
